Remove age-key.txt from repository and improve .gitignore
- Remove accidentally committed age-key.txt from git tracking
- Improve .gitignore to prevent future key commits
- Add note about production security considerations

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Age private key - NEVER commit this!
 age-key.txt
+*.agekey
 
 # Temporary files
 *-plain.yaml
 *.tmp
+
+# Test files - ignore for demo
+# (In production, these should be properly secured)
